<?xml version="1.0"?>
<package format="2">
  <name>rosbag2_cpp</name>
  <version>0.2.4</version>
  <description>C++ ROSBag2 client library</description>
  <maintainer email="karsten@openrobotics.org">Karsten Knese</maintainer>
  <maintainer email="ros-tooling@googlegroups.com">ROS Tooling Working Group</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_runtime_c</build_depend>
  <build_depend>rosidl_runtime_cpp</build_depend>

  <depend>ament_index_cpp</depend>
  <depend>pluginlib</depend>
  <depend>poco_vendor</depend>
  <depend>rcutils</depend>
  <depend>rosbag2_storage</depend>
  <depend>rosidl_generator_cpp</depend>
  <depend>rosidl_runtime_c</depend>
  <depend>rosidl_runtime_cpp</depend>
  <depend>rosidl_typesupport_cpp</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>
  <depend>shared_queues_vendor</depend>
  
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>test_msgs</test_depend>
  <test_depend>rosbag2_test_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
